--- a/Eksamen-2024/product.html
+++ b/Eksamen-2024/product.html
@@ -81,7 +81,7 @@
         </section>
         <section id="liknende-produkter">
             <h3>Lignende produkter</h3>
-            <a href="#">Flere liknende produkter <i class="fa-solid fa-arrow-right"></i></a>
+            <p><a href="#">Flere liknende produkter <i class="fa-solid fa-arrow-right"></i></a></p>
             <aside class="column-container">
                 <article class="products">
                     <img src="img/løpesko-category.jpg" alt="">
