--- a/Eksamen-2024/product.html
+++ b/Eksamen-2024/product.html
@@ -66,10 +66,14 @@
                         <select required> 
                             <!-- Drop-down meny for å velge land, hvor det er påkrevd å velge noe -->
                             <option value="">Velg en størelse</option> <!-- Placeholder-valg -->
-                            <option value="S">Small</option> 
-                            <option value="M">Medium</option> 
-                            <option value="L">Large</option> 
-                            <option value="XL">Extra Large</option> 
+                            <option value="36">36</option> 
+                            <option value="37">37</option> 
+                            <option value="38">38</option> 
+                            <option value="39">39</option> 
+                            <option value="40">40</option> 
+                            <option value="41">41</option> 
+                            <option value="42">42</option> 
+                            <option value="43">43</option> 
                         </select>
                     </label>
                 </form>
