lagde scroll for aside på product side

--- a/Eksamen-2024/product.html
+++ b/Eksamen-2024/product.html
@@ -86,7 +86,7 @@
         <section id="liknende-produkter">
             <h3>Lignende produkter</h3>
             <p><a href="#">Flere liknende produkter <i class="fa-solid fa-arrow-right"></i></a></p>
-            <aside class="column-container">
+            <aside>
                 <article class="products">
                     <img src="img/løpesko-category.jpg" alt="">
                     <p>Adidas fly</p>
@@ -122,6 +122,42 @@
                     <i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-regular fa-star"></i>
                     <p>144 reviews</p>
                 </article>  
+
+                <article class="products">
+                    <img src="img/løpesko-category.jpg" alt="">
+                    <p>Adidas fly</p>
+                    <p><a href="#">ADIDAS</a></p>
+                    <p>pris: 899kr</p>
+                    <i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-regular fa-star"></i>
+                    <p>144 reviews</p>
+                </article> 
+
+                <article class="products">
+                    <img src="img/løpesko-category.jpg" alt="">
+                    <p>Adidas fly</p>
+                    <p><a href="#">ADIDAS</a></p>
+                    <p>pris: 899kr</p>
+                    <i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-regular fa-star"></i>
+                    <p>144 reviews</p>
+                </article> 
+
+                <article class="products">
+                    <img src="img/løpesko-category.jpg" alt="">
+                    <p>Adidas fly</p>
+                    <p><a href="#">ADIDAS</a></p>
+                    <p>pris: 899kr</p>
+                    <i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-regular fa-star"></i>
+                    <p>144 reviews</p>
+                </article> 
+                
+                <article class="products">
+                    <img src="img/løpesko-category.jpg" alt="">
+                    <p>Adidas fly</p>
+                    <p><a href="#">ADIDAS</a></p>
+                    <p>pris: 899kr</p>
+                    <i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-regular fa-star"></i>
+                    <p>144 reviews</p>
+                </article> 
             </aside>
         </section>
         </main>
