--- a/Eksamen-2024/index.html
+++ b/Eksamen-2024/index.html
@@ -138,34 +138,28 @@
            </section>
 
            <!--populære kategorier-->
+           <section id="popkategorier">
            <h2>Våre mest populære kategorier</h2>
            <p>Opplev det beste av det beste!</p>
-           <section id="popkategorier">
-
+           
+           <section id="category-grid">
             <article id="cat1" class="category-card">
                 <h3>Sneakers</h3>
-                <!--<img src="img/sneakers-category.jpg" alt="hvite nike-sneakers med grå bakgrunn">-->
             </article>
             <article id="cat2" class="category-card">
                 <h3>Løpesko</h3>
-                <!--<img src="img/løpesko-category.jpg" alt="hvite adidas-løpesko med sort bakgrunn">-->
             </article>
             <article id="cat3" class="category-card">
                 <h3>Pensko</h3>
-                <!--<img src="img/pensko.jpg" alt="brune oxfordsko">-->
             </article>
             <article id="cat4" class="category-card">
                 <h3>Boots</h3>
-                <!--<img src="img/boots-category.jpg" alt="brune timberland-boots">-->
             </article>
             <article id="cat5" class="category-card">
                 <h3>Designer</h3>
-                <!--<img src="img/designer-category.jpg" alt="grønne nike-dunks mot grønn bakgrunn">-->
             </article>
-
-           </section>
-
-           <!--Annmeldelser (skal utvides så drøyer med denne)-->
+            </section>
+        </section>
            <h3 class="ann-overskrift">Annmeldelser</h3>
            
            <section class="annmeldelser">
