fjernet required fra nyhetsbrev checkbox

--- a/Eksamen-2024/checkout.html
+++ b/Eksamen-2024/checkout.html
@@ -133,7 +133,7 @@
                         </label>
                         <label class="godta">
                             Ja, jeg ønsker å motta tekstmeldinger med tilbud og nyheter!: 
-                            <input type="checkbox" required> 
+                            <input type="checkbox"> 
                         </label>
                 </form>
             </section>
