linket til id-ene

--- a/Eksamen-2024/checkout.html
+++ b/Eksamen-2024/checkout.html
@@ -21,9 +21,9 @@
                 </form>
                 <ul>
                     <li><a href="index.html">Hjem</a></li>
-                    <li><a href="#popprodukter">Produkter</a></li> <!--husk å legg id på seksjon med populære produkter-->
+                    <li><a href="index.html#popprodukter">Produkter</a></li> <!--husk å legg id på seksjon med populære produkter-->
                     <li><a href="index.html"><img class="mainlogo" src="img/logo.png" alt="nettsted logo"></a></li>
-                    <li><a href="#popkategorier">kategorier</a></li> <!--husk å legg id på seksjon med populære kategorier-->
+                    <li><a href="index.html#popkategorier">kategorier</a></li> <!--husk å legg id på seksjon med populære kategorier-->
                     <li><a href="#contact">kontakt oss</a></li>
                     <li><a href="#"><i class="fa-regular fa-user"></i></a></li>
                     <li><a href="#"><i class="fa-regular fa-heart"></i></a></li>
@@ -158,8 +158,8 @@
                 <h4>SNARVEIER</h4>
                 <nav>
                     <ul>
-                        <li><a href="#popprodukter">Produkter</a></li>
-                        <li><a href="#popkategorier">Katergorier</a></li>
+                        <li><a href="index.html#popprodukter">Produkter</a></li>
+                        <li><a href="index.html#popkategorier">Katergorier</a></li>
                         <li><a href="#contact">Kontakt oss</a></li>
                     </ul>
                 </nav>
