--- a/Eksamen-2024/product.html
+++ b/Eksamen-2024/product.html
@@ -36,7 +36,7 @@
             <nav>
                 <ul class="breadcrumb">
                     <li><a href="index.html">Hjem ></a></li>
-                    <li><a href="#popkategorier">Kategorier ></a></li>
+                    <li><a href="index.html#popkategorier">Kategorier ></a></li>
                     <li>Produkter</li>
                 </ul>
             </nav>
