gjort klar for css, men mangler ikoner

--- a/Eksamen-2024/checkout.html
+++ b/Eksamen-2024/checkout.html
@@ -39,10 +39,113 @@
 
             <article>
                 <img src="img/nike-dunks-1280.jpg" alt="Nike-">
+                <h3>Nike Dunks</h3>
+                <p>kr 1299</p>
+                <p>farge: gul/blå</p>
+                <form>
+                    <label>
+                        størelse: 
+                        <select required> 
+                            <option value="">43</option>
+                            <option value="36">36</option> 
+                            <option value="37">37</option> 
+                            <option value="38">38</option> 
+                            <option value="39">39</option> 
+                            <option value="40">40</option> 
+                            <option value="41">41</option> 
+                            <option value="42">42</option> 
+                            <option value="43">43</option> 
+                        </select>
+                    </label>
+                    <label>
+                        Antall:  
+                        <select required> 
+                            <option value="">1</option>
+                            <option value="36">1</option> 
+                            <option value="37">2</option> 
+                            <option value="38">3</option> 
+                            <option value="39">4</option> 
+                            <option value="40">5</option> 
+                            <option value="41">6</option> 
+                            <option value="42">7</option> 
+                            <option value="43">8</option> 
+                        </select>
+                    </label>
+                </form>
             </article>
 
             <article>
                 <img src="img/nike-dunks-1280.jpg" alt="Nike-">
+                <h3>Nike Dunks</h3>
+                <p>kr 1299</p>
+                <p>farge: gul/blå</p>
+                <form>
+                    <label>
+                        størelse: 
+                        <select required> 
+                            <option value="">43</option>
+                            <option value="36">36</option> 
+                            <option value="37">37</option> 
+                            <option value="38">38</option> 
+                            <option value="39">39</option> 
+                            <option value="40">40</option> 
+                            <option value="41">41</option> 
+                            <option value="42">42</option> 
+                            <option value="43">43</option> 
+                        </select>
+                    </label>
+                    <label>
+                        Antall:  
+                        <select required> 
+                            <option value="">1</option>
+                            <option value="36">1</option> 
+                            <option value="37">2</option> 
+                            <option value="38">3</option> 
+                            <option value="39">4</option> 
+                            <option value="40">5</option> 
+                            <option value="41">6</option> 
+                            <option value="42">7</option> 
+                            <option value="43">8</option> 
+                        </select>
+                    </label>
+                </form>
+            </article>
+
+            <article>
+                <img src="img/nike-dunks-1280.jpg" alt="Nike-">
+                <h3>Nike Dunks</h3>
+                <p>kr 1299</p>
+                <p>farge: gul/blå</p>
+                <form>
+                    <label>
+                        størelse: 
+                        <select required> 
+                            <option value="">43</option>
+                            <option value="36">36</option> 
+                            <option value="37">37</option> 
+                            <option value="38">38</option> 
+                            <option value="39">39</option> 
+                            <option value="40">40</option> 
+                            <option value="41">41</option> 
+                            <option value="42">42</option> 
+                            <option value="43">43</option> 
+                        </select>
+                    </label>
+                    <label>
+                        Antall:  
+                        <select required> 
+                            <option value="">1</option>
+                            <option value="36">1</option> 
+                            <option value="37">2</option> 
+                            <option value="38">3</option> 
+                            <option value="39">4</option> 
+                            <option value="40">5</option> 
+                            <option value="41">6</option> 
+                            <option value="42">7</option> 
+                            <option value="43">8</option> 
+                        </select>
+                    </label>
+                </form>
             </article>
             </section>
 
@@ -120,7 +223,7 @@
                         <input type="number" required placeholder="CVC/CVV"> 
                     </label>
 
-                    <label>Å betale: 2299kr</label>
+                    <label>Å betale: 3899kr</label>
                     <input type="submit" value="Fullfør kjøp"> 
                     <!-- Send-knapp som sender skjemaet når det er korrekt utfylt -->
                      <p>Du bekrefter herved at opplysningene og dokumentene du har
