startet på css på shoppingbaggen sine artikkelkort
mangle fortsatt ikoner

--- a/Eksamen-2024/checkout.html
+++ b/Eksamen-2024/checkout.html
@@ -39,6 +39,7 @@
 
             <article>
                 <img src="img/nike-dunks-1280.jpg" alt="Nike-">
+            <section>
                 <h3>Nike Dunks</h3>
                 <p>kr 1299</p>
                 <p>farge: gul/blå</p>
@@ -57,25 +58,13 @@
                             <option value="43">43</option> 
                         </select>
                     </label>
-                    <label>
-                        Antall:  
-                        <select required> 
-                            <option value="">1</option>
-                            <option value="36">1</option> 
-                            <option value="37">2</option> 
-                            <option value="38">3</option> 
-                            <option value="39">4</option> 
-                            <option value="40">5</option> 
-                            <option value="41">6</option> 
-                            <option value="42">7</option> 
-                            <option value="43">8</option> 
-                        </select>
-                    </label>
+                    <input type="number" placeholder="1" required>
                 </form>
+            </section>
             </article>
-
             <article>
                 <img src="img/nike-dunks-1280.jpg" alt="Nike-">
+            <section>
                 <h3>Nike Dunks</h3>
                 <p>kr 1299</p>
                 <p>farge: gul/blå</p>
@@ -94,25 +83,13 @@
                             <option value="43">43</option> 
                         </select>
                     </label>
-                    <label>
-                        Antall:  
-                        <select required> 
-                            <option value="">1</option>
-                            <option value="36">1</option> 
-                            <option value="37">2</option> 
-                            <option value="38">3</option> 
-                            <option value="39">4</option> 
-                            <option value="40">5</option> 
-                            <option value="41">6</option> 
-                            <option value="42">7</option> 
-                            <option value="43">8</option> 
-                        </select>
-                    </label>
+                    <input type="number" placeholder="1" required>
                 </form>
+            </section>
             </article>
-
             <article>
                 <img src="img/nike-dunks-1280.jpg" alt="Nike-">
+            <section>
                 <h3>Nike Dunks</h3>
                 <p>kr 1299</p>
                 <p>farge: gul/blå</p>
@@ -131,21 +108,9 @@
                             <option value="43">43</option> 
                         </select>
                     </label>
-                    <label>
-                        Antall:  
-                        <select required> 
-                            <option value="">1</option>
-                            <option value="36">1</option> 
-                            <option value="37">2</option> 
-                            <option value="38">3</option> 
-                            <option value="39">4</option> 
-                            <option value="40">5</option> 
-                            <option value="41">6</option> 
-                            <option value="42">7</option> 
-                            <option value="43">8</option> 
-                        </select>
-                    </label>
+                    <input type="number" placeholder="1" required>
                 </form>
+            </section>
             </article>
             </section>
 
@@ -189,7 +154,7 @@
                         
                         <label>
                             Express Hjemlevering
-                            <input type="radio"  name="leveranse" required> 
+                            <input type="radio"  name="leveranse" required>
                             <!-- Radioknapp for mann, med name-attributt som grupperer den med de andre kjønn-valgene -->
                         </label>
                         
