la til antall label

--- a/Eksamen-2024/checkout.html
+++ b/Eksamen-2024/checkout.html
@@ -58,7 +58,10 @@
                             <option value="43">43</option> 
                         </select>
                     </label>
-                    <input type="number" placeholder="1" required>
+                    <label>
+                        Antall:
+                        <input type="number" placeholder="1" required>
+                    </label>
                 </form>
             </section>
             </article>
@@ -83,7 +86,10 @@
                             <option value="43">43</option> 
                         </select>
                     </label>
-                    <input type="number" placeholder="1" required>
+                    <label>
+                        Antall:
+                        <input type="number" placeholder="1" required>
+                    </label>
                 </form>
             </section>
             </article>
@@ -108,7 +114,10 @@
                             <option value="43">43</option> 
                         </select>
                     </label>
-                    <input type="number" placeholder="1" required>
+                    <label>
+                        Antall:
+                        <input type="number" placeholder="1" required>
+                    </label>
                 </form>
             </section>
             </article>
