fikset feil i tekst

--- a/Eksamen-2024/checkout.html
+++ b/Eksamen-2024/checkout.html
@@ -124,7 +124,8 @@
             </section>
 
             <section id="personopplysninger">
-                <h3>2. Leveringsadresse</h3>
+                <h3>2. Dine opplysninger</h3>
+                <p>Leveringsadresse: </p>
                 <form class="column-layout">
                     <label class="label-50">
                         Fornavn: 
