fikset feil i html anngående tekst

--- a/Eksamen-2024/checkout.html
+++ b/Eksamen-2024/checkout.html
@@ -157,6 +157,7 @@
             </section>
             <section id="levering">
                 <h3>3. Levering</h3>
+                <p>leveringsvalg: </p>
                 <form class="column-layout">
                     <fieldset>
                         <!-- Brukes til å gruppere relaterte alternativer, her for valg av kjønn -->
