la til felt for email og telefonnummer

--- a/Eksamen-2024/checkout.html
+++ b/Eksamen-2024/checkout.html
@@ -149,6 +149,16 @@
                         poststed: 
                         <input type="text" required placeholder="Poststed*"> 
                     </label>
+
+                    <label id="kontaktinfo">
+                        <label>Kontaktinformasjon</label>
+                        E-Post: 
+                        <input type="email" placeholder="halden@hiof.no">
+                    </label>
+                    <label>
+                    Telefon: 
+                    <input type="number" placeholder="+47 450***088">
+                    </label>
                     
                     <input type="submit" class="bigbutton" value="Lagre"> 
                     <!-- Send-knapp som sender skjemaet når det er korrekt utfylt -->
