fikset width på utløpsdato og cvc/cvv

--- a/Eksamen-2024/checkout.html
+++ b/Eksamen-2024/checkout.html
@@ -199,11 +199,11 @@
                         Kortnummer: 
                         <input type="number" required placeholder="453235 **** 4567"> 
                     </label>
-                    <label>
+                    <label class="label-50">
                         Utløpsdato: 
                         <input type="number" required placeholder="mm/dd/yyyy"> 
                     </label>
-                    <label>
+                    <label class="label-50">
                         CVC/CVV: 
                         <input type="number" required placeholder="CVC/CVV"> 
                     </label>
