sentrert label tekst om pris og gjort prisen fet

--- a/Eksamen-2024/checkout.html
+++ b/Eksamen-2024/checkout.html
@@ -208,7 +208,8 @@
                         <input type="number" required placeholder="CVC/CVV"> 
                     </label>
 
-                    <label>Å betale: 3899kr</label>
+                    <label id="label-center">Å betale inkl.mva. <span>3 899kr</span></label>
+                    
                     <input class="bigbutton" type="submit" value="Fullfør kjøp"> 
                     <!-- Send-knapp som sender skjemaet når det er korrekt utfylt -->
                      <p>Du bekrefter herved at opplysningene og dokumentene du har
