lagd en border mellom de forskjellige tingene i checkout.html

--- a/Eksamen-2024/checkout.html
+++ b/Eksamen-2024/checkout.html
@@ -33,7 +33,7 @@
             </nav>
         </header>
         <main>
-            <section class="handlevogn">
+            <section id="handlevogn">
             <h1>Kasse</h1>
             <h3>1. Handlevogn</h3>
 
@@ -209,7 +209,7 @@
                     </label>
 
                     <label id="label-center">Å betale inkl.mva. <span>3 899kr</span></label>
-                    
+
                     <input class="bigbutton" type="submit" value="Fullfør kjøp"> 
                     <!-- Send-knapp som sender skjemaet når det er korrekt utfylt -->
                      <p>Du bekrefter herved at opplysningene og dokumentene du har
