byttet til stor tekst

--- a/Eksamen-2024/checkout.html
+++ b/Eksamen-2024/checkout.html
@@ -200,6 +200,7 @@
             </section>
             <section id="betaling">
                 <h3>4. Betaling</h3>
+                <p>BETAL MED KORT <i class="fa-solid fa-credit-card"></i></p>
                 <form class="column-layout">
                     <label>
                         Kortnummer: 
