la til ikoner i produktkortene i checkout.html

--- a/Eksamen-2024/checkout.html
+++ b/Eksamen-2024/checkout.html
@@ -34,93 +34,101 @@
         </header>
         <main>
             <section id="handlevogn">
-            <h1>Kasse</h1>
-            <h3>1. Handlevogn</h3>
+                <h1>Kasse</h1>
+                <h3>1. Handlevogn</h3>
 
-            <article>
-                <img src="img/nike-dunks-1280.jpg" alt="Nike-">
-            <section>
-                <h3>Nike Dunks</h3>
-                <p>kr 1299</p>
-                <p>farge: gul/blå</p>
-                <form>
-                    <label>
-                        størelse: 
-                        <select required> 
-                            <option value="">43</option>
-                            <option value="36">36</option> 
-                            <option value="37">37</option> 
-                            <option value="38">38</option> 
-                            <option value="39">39</option> 
-                            <option value="40">40</option> 
-                            <option value="41">41</option> 
-                            <option value="42">42</option> 
-                            <option value="43">43</option> 
-                        </select>
-                    </label>
-                    <label>
-                        Antall:
-                        <input type="number" placeholder="1" required>
-                    </label>
-                </form>
-            </section>
-            </article>
-            <article>
-                <img src="img/nike-dunks-1280.jpg" alt="Nike-">
-            <section>
-                <h3>Nike Dunks</h3>
-                <p>kr 1299</p>
-                <p>farge: gul/blå</p>
-                <form>
-                    <label>
-                        størelse: 
-                        <select required> 
-                            <option value="">43</option>
-                            <option value="36">36</option> 
-                            <option value="37">37</option> 
-                            <option value="38">38</option> 
-                            <option value="39">39</option> 
-                            <option value="40">40</option> 
-                            <option value="41">41</option> 
-                            <option value="42">42</option> 
-                            <option value="43">43</option> 
-                        </select>
-                    </label>
-                    <label>
-                        Antall:
-                        <input type="number" placeholder="1" required>
-                    </label>
-                </form>
-            </section>
-            </article>
-            <article>
-                <img src="img/nike-dunks-1280.jpg" alt="Nike-">
-            <section>
-                <h3>Nike Dunks</h3>
-                <p>kr 1299</p>
-                <p>farge: gul/blå</p>
-                <form>
-                    <label>
-                        størelse: 
-                        <select required> 
-                            <option value="">43</option>
-                            <option value="36">36</option> 
-                            <option value="37">37</option> 
-                            <option value="38">38</option> 
-                            <option value="39">39</option> 
-                            <option value="40">40</option> 
-                            <option value="41">41</option> 
-                            <option value="42">42</option> 
-                            <option value="43">43</option> 
-                        </select>
-                    </label>
-                    <label>
-                        Antall:
-                        <input type="number" placeholder="1" required>
-                    </label>
-                </form>
-            </section>
-            </article>
+                <article>
+                    <img src="img/nike-dunks-1280.jpg" alt="Nike-">
+                <section>
+                    <h3>Nike Dunks</h3>
+                    <p>kr 1299</p>
+                    <p>farge: gul/blå</p>
+                    <form>
+                        <label>
+                            størelse: 
+                            <select required> 
+                                <option value="">43</option>
+                                <option value="36">36</option> 
+                                <option value="37">37</option> 
+                                <option value="38">38</option> 
+                                <option value="39">39</option> 
+                                <option value="40">40</option> 
+                                <option value="41">41</option> 
+                                <option value="42">42</option> 
+                                <option value="43">43</option> 
+                            </select>
+                        </label>
+                        <label>
+                            Antall:
+                            <input type="number" placeholder="1" required>
+                        </label>
+                    </form>
+                    <i class="fa-regular fa-heart"></i>
+                    <i class="fa-solid fa-trash"></i>
+                </section>
+                </article>
+
+                <article>
+                    <img src="img/nike-dunks-1280.jpg" alt="Nike-">
+                <section>
+                    <h3>Nike Dunks</h3>
+                    <p>kr 1299</p>
+                    <p>farge: gul/blå</p>
+                    <form>
+                        <label>
+                            størelse: 
+                            <select required> 
+                                <option value="">43</option>
+                                <option value="36">36</option> 
+                                <option value="37">37</option> 
+                                <option value="38">38</option> 
+                                <option value="39">39</option> 
+                                <option value="40">40</option> 
+                                <option value="41">41</option> 
+                                <option value="42">42</option> 
+                                <option value="43">43</option> 
+                            </select>
+                        </label>
+                        <label>
+                            Antall:
+                            <input type="number" placeholder="1" required>
+                        </label>
+                    </form>
+                    <i class="fa-regular fa-heart"></i>
+                    <i class="fa-solid fa-trash"></i>
+                </section>
+                </article>
+
+                <article>
+                    <img src="img/nike-dunks-1280.jpg" alt="Nike-">
+                <section>
+                    <h3>Nike Dunks</h3>
+                    <p>kr 1299</p>
+                    <p>farge: gul/blå</p>
+                    <form>
+                        <label>
+                            størelse: 
+                            <select required> 
+                                <option value="">43</option>
+                                <option value="36">36</option> 
+                                <option value="37">37</option> 
+                                <option value="38">38</option> 
+                                <option value="39">39</option> 
+                                <option value="40">40</option> 
+                                <option value="41">41</option> 
+                                <option value="42">42</option> 
+                                <option value="43">43</option> 
+                            </select>
+                        </label>
+                        <label>
+                            Antall:
+                            <input type="number" placeholder="1" required>
+                        </label>
+                    </form>
+                    <i class="fa-regular fa-heart"></i>
+                    <i class="fa-solid fa-trash"></i>
+                </section>
+                </article>
             </section>
 
             <section id="personopplysninger">
